--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,42 +1,28 @@
-# Stage 1: Build React App
-FROM node:20 AS builder
+# Build argument
+ARG MODE=dev
 
+# === Stage 1: Builder ===
+FROM node:20-alpine AS builder
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install
-
 COPY . .
+RUN npm run build
 
-# Use build only for production
-ARG MODE=prod
-ENV MODE=${MODE}
-
-RUN if [ "$MODE" = "prod" ]; then npm run build; fi
-
-# Stage 2: Serve
-# In prod: Use Nginx to serve static site
-# In dev: Use React dev server
-
-FROM node:20 AS devserver
+# === Stage 2: Dev ===
+FROM node:20-alpine AS dev
 WORKDIR /app
-COPY --from=builder /app ./
+COPY package*.json ./
+RUN npm install
+COPY . .
+EXPOSE 3000
 CMD ["npm", "start"]
 
-FROM nginx:alpine AS nginxserver
+# === Stage 3: Prod ===
+FROM nginx:alpine AS prod
 COPY --from=builder /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
 
-# Final stage switcher (default: production)
-FROM alpine AS final
-
-ARG MODE=prod
-ENV MODE=${MODE}
-
-COPY --from=devserver /app /app
-COPY --from=nginxserver /usr/share/nginx/html /usr/share/nginx/html
-
-CMD sh -c 'if [ "$MODE" = "dev" ]; then cd /app && npm install && npm start; else nginx -g "daemon off;"; fi'
-
-EXPOSE 3000
+# === Final stage ===
+FROM ${MODE} AS final
