--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,10 @@
 {
   "name": "frontend",
   "version": "1.0.0",
+  "proxy": "http://backend:5000",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "react": "^18.2.0",
